--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
+    "async": "^3.2.4",
     "bootstrap": "^5.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
